--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">游戏资讯</string>
+    <string name="string_view_network_error">网络错误,点击重试</string>
+    <string name="string_view_more">加载更多…</string>
+    <string name="string_nomore">--- 没有更多了 ---</string>
+    <string name="string_view_empty">暂无数据</string>
 </resources>
