--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="string_view_more">加载更多…</string>
     <string name="string_nomore">--- 没有更多了 ---</string>
     <string name="string_view_empty">暂无数据</string>
+    <string name="string_share">(分享至游戏资讯，下载链接：https://www.coolapk.com/apk/com.stx.xhb.dmgameapp)</string>
 </resources>
